2011-02-19  Ivan Maidanski  <ivmai@mail.ru>

	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.68,
	automake-1.11.1 and libtool-2.4).
	* configure: Ditto.

2011-02-09  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops.c (AO_USE_NO_SIGNALS, AO_USE_NANOSLEEP): New
	macros.
	* src/atomic_ops.c (AO_USE_WIN32_PTHREADS): Imply
	AO_USE_NO_SIGNALS.
	* src/atomic_ops.c: Don't include signal.h if AO_USE_NO_SIGNALS.
	* src/atomic_ops.c: Include time.h if AO_USE_NANOSLEEP.
	* src/atomic_ops.c (AO_locks, AO_pause): Reformat the code.
	* src/atomic_ops.c (AO_pause): Use nanosleep() if
	AO_USE_NANOSLEEP.
	* src/atomic_ops.c (all_sigs, initialized,
	AO_compare_and_swap_emulation,
	AO_compare_double_and_swap_double_emulation): Use
	AO_USE_NO_SIGNALS instead of AO_USE_WIN32_PTHREADS.

2011-01-07  Ivan Maidanski  <ivmai@mail.ru>

	* src/.cvsignore: Add more auto-generated files.
	* tests/.cvsignore: Ditto.
	* src/atomic_ops/sysdeps/armcc/arm_v6.h (AO_nop_full, AO_store,
	AO_compare_double_and_swap_double): Reformat code.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_nop_full,
	AO_compare_double_and_swap_double): Ditto.
	* src/atomic_ops/sysdeps/armcc/arm_v6.h (AO_compare_and_swap):
	Produce "it eq" instruction only for Thumb mode.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_compare_and_swap): Ditto.

2010-11-23  Ivan Maidanski <ivmai@mail.ru> (really Michael Hope)

	* src/atomic_ops/sysdeps/armcc/arm_v6.h (AO_compare_and_swap):
	Insert "it eq" just before "strexeq" (required for Thumb-2 mode,
	ignored in ARM mode).
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_compare_and_swap): Ditto.

2010-09-15  Ivan Maidanski <ivmai@mail.ru> (with input from Gregory Farnum)

	* src/atomic_ops.h: Include armcc/arm_v6.h if __ARMCC__.
	* src/atomic_ops.h: Include ibmc/powerpc.h if __IBMC__.
	* src/atomic_ops.h: Define AO_GENERALIZE_TWICE if msftc/arm.h is
	included.
	* src/atomic_ops.h: Define AO_GENERALIZE_TWICE if AO_CAN_EMUL_CAS
	is defined but emul_cas.h has not been included.