@@ -1,5 +1,10 @@
 2011-02-19  Ivan Maidanski  <ivmai@mail.ru>
 
+	* src/atomic_ops.c: Explicitly define AO_USE_NO_SIGNALS and
+	AO_USE_NANOSLEEP for NaCl.
+
+2011-02-19  Ivan Maidanski  <ivmai@mail.ru>
+
 	* aclocal.m4: Regenerate (by autoreconf -vif using autoconf-2.68,
 	automake-1.11.1 and libtool-2.4).
 	* configure: Ditto.
